#
# Copyright (C) 2024 Alessandro Gatti - frob.it
#
# SPDX-License-Identifier: Apache-2.0
#

[package]
name = "adfmaker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
clap = { features = ["derive"], version = "4.5.37" }
clap-verbosity-flag = "3.0.2"
csv = "1.3.1"
encoding = "0.2.33"
log = "0.4.27"
memoize = "0.5.1"
pretty-hex = "0.4.1"
simple_logger = "5.0.0"
thiserror = "2.0.12"
